examples/kubernetes/weather/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
  labels:
    app: weather
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
        - name: weather
          volumeMounts:
            - name: proxies
              mountPath: /etc/dobby/proxies/
          image: jskswamy/dobby:v2.0
          ports:
            - containerPort: 4444
          readinessProbe:
            httpGet:
              path: /readiness
              port: 4444
            initialDelaySeconds: 0
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 4444
            initialDelaySeconds: 0
            periodSeconds: 3
      volumes:
        - name: proxies
          configMap:
            name: weather-proxies
