examples/kubernetes/weather/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather
spec:
  type: ClusterIP
  selector:
      app: weather
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4444
